# ruperf

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _config.yml  build.rs  index.html  whitepaper.tex  wrapper.h
docs/: overview.md  ruperf.md  team.md
examples/: Makefile  file-io.rs  fp-calc.rs
git_hooks/: pre-commit
qemu/: boot-vm
samples/: file-io.rs  fp-calc.rs
samples/file-io/: Cargo.toml
samples/file-io/src/: main.rs
samples/fp-calc/: Cargo.toml
samples/fp-calc/src/: main.rs
samples/reads-writes/: Cargo.toml
samples/reads-writes/src/: main.rs
src/: event.rs  gui.rs  main.rs  stat.rs  test.rs  utils.rs
src/bindings/: mod.rs  perf_event.rs
src/event/: constants.rs  event.rs  fd.rs  ioctl.rs  mod.rs  open.rs  utils.rs
src/event/perf/: mod.rs
src/event/sys/: linux.rs  mod.rs  sys.rs  wrapper.rs
src/event/system-call/: open.c  open.h
src/gui/: events.rs  messages.rs  mod.rs  pane_content.rs  perf_event.rs  save_state.rs  state.rs  style.rs  widgets.rs
src/test/: basic.rs  counts.rs  events.rs  mod.rs  paranoid.rs  pfm.rs  testutils.rs
wrappers/: perf_event.h
