[package]
name = "perf-rust"
version = "0.1.0"
authors = ["Briana Oursler <briana.oursler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
structopt = "0.3.21"
thiserror= "1.0.24"
libc = "0.2.97"
