[package]
name = "perf-rust"
version = "0.1.0"
authors = ["Briana Oursler <briana.oursler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
structopt = "0.3.21"
thiserror= "1.0.24"
libc = "0.2.97"
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
iced = "0.3.0"
os_pipe = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"
